# brain-games

./: .gitignore  Makefile  Readme.md  pyproject.toml  setup.cfg
.github/workflows/: make_flask8.yml  pyci.yml
brain_games/: __init__.py  cli.py  engine.py  functions.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
n8creator_brain_games.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
