[tool.poetry]
name = "n8creator_brain_games"
version = "0.1.2"
description = ""
authors = ["Dmitry Volkov <n8creator@pm.me>"]
packages = [
  { include = "brain_games" },
  ]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


