[tool.poetry]
name = "n8creator_brain_games"
version = "0.1.6"
description = "Hexlet Brain Games project. Contains Even, Calc, GCD, Progression and Prime games"
authors = ["Dmitry Volkov <n8creator@pm.me>"]
packages = [
  { include = "brain_games" },
  ]

repository = "https://github.com/n8creator/python-project-lvl1"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.6",
  "Environment :: Console",
  "Natural Language :: English",
  "Topic :: Games/Entertainment :: Puzzle Games"
  ]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


